--- a/AiCalendar.Blazor/Components/Layout/MainLayout.razor
+++ b/AiCalendar.Blazor/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
         </div>
 
         <article class="content px-4">
-            <ErrorBoundary OnError="LogException" @ref="errorBoundary">
+            <ErrorBoundary @ref="errorBoundary">
                 <ChildContent>
                     @Body
                 </ChildContent>
@@ -36,11 +36,6 @@
     protected override void OnParametersSet()
     {
         errorBoundary?.Recover();
-    }
-
-    private void LogException(Exception ex)
-    {
-        Logger.LogError(ex, "An unhandled exception occurred in the application.");
     }
 }
 
