--- a/AiCalendar.Blazor/Components/Layout/NavMenu.razor
+++ b/AiCalendar.Blazor/Components/Layout/NavMenu.razor
@@ -13,6 +13,18 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="users/register">
+                Register
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="users/login">
+                Login
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
