--- a/AiCalendar.Blazor/Components/Routes.razor
+++ b/AiCalendar.Blazor/Components/Routes.razor
@@ -1,8 +1,12 @@
-﻿@using AiCalendar.Blazor.Components.Pages.StatusCodePages
+﻿@using AiCalendar.Blazor.Components.Pages.Users
+@using Microsoft.AspNetCore.Components.Authorization
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+            <NotAuthorized>
+                <RedirectTo401UnAuthorized/>
+            </NotAuthorized>
+        </AuthorizeRouteView>
     </Found>
 </Router>
