--- a/AiCalendar.Blazor/Components/Pages/Users/Login.razor
+++ b/AiCalendar.Blazor/Components/Pages/Users/Login.razor
@@ -72,6 +72,8 @@
 
                 if (!string.IsNullOrEmpty(responseData.Token))
                 {
+                    await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).SetToken(responseData.Token);
+
                     ((CustomAuthenticationStateProvider)AuthenticationStateProvider).NotifyUserAuthentication(responseData.Token);
                 }
 
