--- a/AiCalendar.Blazor/Components/Layout/NavMenu.razor
+++ b/AiCalendar.Blazor/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">AiCalendar.Blazor</a>
     </div>
@@ -14,17 +15,26 @@
             </NavLink>
         </div>
         
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="users/register">
-                Register
-            </NavLink>
-        </div>
-        
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="users/login">
-                Login
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <NavLink class="nav-link" href="users/logout">
+                    Logout
+                </NavLink>
+            </Authorized>
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users/register">
+                        Register
+                    </NavLink>
+                </div>
+                
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users/login">
+                        Login
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
