--- a/AiCalendar.Blazor/Components/Layout/MainLayout.razor
+++ b/AiCalendar.Blazor/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
-﻿@inherits LayoutComponentBase
-@inject ILogger<MainLayout> Logger
+﻿@using System.Security.Claims
 @using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
+@inject ILogger<MainLayout> Logger
 
 <div class="page">
     <div class="sidebar">
@@ -12,10 +13,10 @@
             @* <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a> *@
             <AuthorizeView>
                 <Authorized>
-                    <span class="ms-auto">Welcome, @context.User.Identity.Name!</span>
+                    <span>Welcome, @context.User.Identities.FirstOrDefault().Claims.FirstOrDefault(c => c.Type == "username").Value !</span>
                 </Authorized>
                 <NotAuthorized>
-                    <span class="ms-auto">Welcome, Guest!</span>
+                    <span>Welcome, Guest!</span>
                 </NotAuthorized>
             </AuthorizeView>
         </div>
