--- a/AiCalendar.Blazor/Components/Layout/NavMenu.razor
+++ b/AiCalendar.Blazor/Components/Layout/NavMenu.razor
@@ -17,9 +17,11 @@
         
         <AuthorizeView>
             <Authorized>
-                <NavLink class="nav-link" href="users/logout">
-                    Logout
-                </NavLink>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users/logout">
+                        Logout
+                    </NavLink>
+                </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
