Added events page and logic for fetching user events

--- a/AiCalendar.Blazor/Components/Layout/NavMenu.razor
+++ b/AiCalendar.Blazor/Components/Layout/NavMenu.razor
@@ -22,6 +22,18 @@
                         Logout
                     </NavLink>
                 </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="events">
+                        Events
+                    </NavLink>
+                </div>
+                
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="events/create">
+                        Create Event
+                    </NavLink>
+                </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
