--- a/AiCalendar.Blazor/Components/Pages/Events/Details.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/Details.razor
@@ -8,6 +8,7 @@
 @inject ILogger<Details> Logger
 @inject StatusCodeErrorHandeller StatusCodeErrorHandeller
 @inject JSRuntime JSRuntime
+@rendermode InteractiveServer
 
 <h3>Event Details</h3>
 
@@ -59,7 +60,7 @@
             {
                 <button class="btn btn-warning" @onclick="CancelEvent">Cancel Event</button>
             }
-            
+
             <button class="btn btn-success" @onclick="UpdateEvent">Update Event</button>
             <button class="btn btn-danger" @onclick="DeleteEvent">Delete Event</button>
 
