--- a/AiCalendar.Blazor/Components/Pages/Events/Events.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/Events.razor
@@ -9,6 +9,7 @@
 @inject ILogger<Events> Logger
 @inject StatusCodeErrorHandeller StatusCodeErrorHandeller
 @inject HttpClient Http
+@rendermode InteractiveServer
 
 <h3 class="text-center">@_currentDate.ToString("MMMM yyyy", CultureInfo.InvariantCulture)</h3>
 
@@ -70,8 +71,8 @@
     }
 
     .day-col {
-        min-width: 140px; /* Adjust this value as needed for the desired width of each day cell */
-        width: calc(100% / 7); /* fallback */
+        min-width: 140px; 
+        width: calc(100% / 7);
     }
 
     .day-cell {
@@ -109,6 +110,7 @@
 
         _currentDate = DateTime.UtcNow;
         GenerateCalendarDays();
+
         await FetchEvents();
     }
 
@@ -162,7 +164,7 @@
     private async Task FetchEvents()
     {
         var userId = (await AuthState).User.FindFirst(c => c.Type == "sub")?.Value;
-        
+
         try
         {
             var query = new List<string>();
@@ -202,7 +204,7 @@
             if (response2.IsSuccessStatusCode)
             {
                 var participatingEvents = await response2.Content.ReadFromJsonAsync<List<EventViewModel>>();
-                
+
                 foreach (var e in participatingEvents)
                 {
                     if (!_events.Any(ev => ev.Id == e.Id))
