--- a/AiCalendar.Blazor/Components/Pages/Users/Logout.razor
+++ b/AiCalendar.Blazor/Components/Pages/Users/Logout.razor
@@ -5,6 +5,8 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager Navigation
+@inject UserSessionManager Auth
+@rendermode InteractiveServer
 
 @code {
     [CascadingParameter] protected Task<AuthenticationState> AuthState { get; set; }
@@ -19,6 +21,7 @@
         }
 
         await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).MarkUserAsLoggedOut();
+        // await Auth.SignOutUserAsync();
 
         Navigation.NavigateTo("/", forceLoad: true);
     }
