--- a/AiCalendar.Blazor/Components/Pages/Users/Login.razor
+++ b/AiCalendar.Blazor/Components/Pages/Users/Login.razor
@@ -4,6 +4,7 @@
 @inject NavigationManager Navigation
 @using AiCalendar.Blazor.Components.Utils
 @using AiCalendar.Blazor.Services
+@using AiCalendar.Blazor.Services.UserSession
 @using AiCalendar.Blazor.ViewModels.Users
 @using Microsoft.AspNetCore.Authorization
 @inject ILogger<Login> Logger
@@ -12,7 +13,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
-@inject UserSessionManager Auth
+@inject IUserSessionManager Auth
 
 <h3 class="text-center">Login</h3>
 
@@ -81,7 +82,7 @@
                 if (!string.IsNullOrEmpty(responseData.Token))
                 {
                     await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).MarkUserAsAuthenticated(responseData.Token);
-                    // await Auth.SignInUserAsync(responseData.Token);
+                    //await Auth.SignInUserAsync(responseData.Token);
                 }
 
                 Navigation.NavigateTo("/", forceLoad: true);
