Refractor some of the logic
The details page is done for now. Also Cancel Event, Update Event and Delete Event are done.

--- a/AiCalendar.Blazor/Components/Pages/Events/CreateEvent.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/CreateEvent.razor
@@ -82,7 +82,7 @@
                 var responseData = await response.Content.ReadFromJsonAsync<EventViewModel>();
 
                 //Later we can navigate to the event details page
-                Navigation.NavigateTo("/", forceLoad: true);
+                Navigation.NavigateTo($"/events/details/{responseData.Id}", forceLoad: true);
 
                 await JSRuntime.InvokeVoidAsync("showAlert", "Successfully created event! 🎉", "success");
             }
