--- a/AiCalendar.Blazor/Components/Pages/Users/Login.razor
+++ b/AiCalendar.Blazor/Components/Pages/Users/Login.razor
@@ -13,7 +13,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
-@inject IUserSessionManager Auth
+@* @inject IUserSessionManager UserSessionManager  *@
 
 <h3 class="text-center">Login</h3>
 
@@ -82,7 +82,7 @@
                 if (!string.IsNullOrEmpty(responseData.Token))
                 {
                     await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).MarkUserAsAuthenticated(responseData.Token);
-                    //await Auth.SignInUserAsync(responseData.Token);
+                    // await UserSessionManager.SignInUserAsync(responseData.Token);
                 }
 
                 Navigation.NavigateTo("/", forceLoad: true);
