Added new implementations
The following implementations are added:
1. Added Spinner component which is shown when data for Events and Details page is loading
2. Increase the alerts showing time to 5 seconds
3. Added 409 error page
4. Implemented update user logic and page
5. Added NavLink in the nav bar for update user page

--- a/AiCalendar.Blazor/Components/Pages/Events/CreateEvent.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/CreateEvent.razor
@@ -2,8 +2,7 @@
 @using AiCalendar.Blazor.ViewModels.Events
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
-@using Swashbuckle.AspNetCore.SwaggerGen
-@attribute [Authorize]
+@* @attribute [Authorize] *@
 @page "/events/create"
 @inject HttpClient Http
 @inject NavigationManager Navigation
