--- a/AiCalendar.Blazor/Components/Layout/NavMenu.razor
+++ b/AiCalendar.Blazor/Components/Layout/NavMenu.razor
@@ -22,6 +22,12 @@
                         Logout
                     </NavLink>
                 </div>
+                
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users/update-account">
+                        Update Account
+                    </NavLink>
+                </div>
 
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="events">
