--- a/AiCalendar.Blazor/Components/Pages/Events/UpdateEvent.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/UpdateEvent.razor
@@ -56,6 +56,7 @@
 
     private EventViewModel EventData { get; set; }
 
+    [SupplyParameterFromForm]
     private UpdateEventViewModel Model { get; set; }
 
     private bool isDisabled = false;
