--- a/AiCalendar.Blazor/Components/Pages/Users/Login.razor
+++ b/AiCalendar.Blazor/Components/Pages/Users/Login.razor
@@ -4,7 +4,6 @@
 @inject NavigationManager Navigation
 @using AiCalendar.Blazor.Components.Utils
 @using AiCalendar.Blazor.Services
-@using AiCalendar.Blazor.Services.UserSession
 @using AiCalendar.Blazor.ViewModels.Users
 @using Microsoft.AspNetCore.Authorization
 @inject ILogger<Login> Logger
@@ -34,6 +33,10 @@
         <label for="inputPassword" class="form-label">Password</label>
         <InputText id="inputPassword" type="password" class="form-control" @bind-Value="Model.Password" />
         <ValidationMessage For="@(() => Model.Password)" />
+        @if (!string.IsNullOrEmpty(WrongPasswordMessage))
+        {
+            <p class="text-danger">@WrongPasswordMessage</p>
+        }
     </div>
     <div class="mb-3">
         <NavLink href="users/register" style="color: purple;">Don't have account'</NavLink>
@@ -55,6 +58,8 @@
     [CascadingParameter] protected Task<AuthenticationState> AuthState { get; set; }
 
     private bool isDisabled = false;
+
+    private string WrongPasswordMessage { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -89,6 +94,15 @@
 
                 await JSRuntime.InvokeVoidAsync("showAlert", "Successfully logged in! 🎉", "success");
             }
+            else if (response.StatusCode == System.Net.HttpStatusCode.Unauthorized)
+            {
+                var responseContent = await response.Content.ReadAsStringAsync();
+                if (responseContent.Contains("password"))
+                {
+                    WrongPasswordMessage = responseContent;
+                    await JSRuntime.InvokeVoidAsync("showAlert", "Wrong password !", "error");
+                }
+            }
             else
             {
                 StatusCodeErrorHandeller.HandleStatusCode(response);
@@ -98,5 +112,7 @@
         {
             Logger.LogError(exception, "An error occurred during registration.");
         }
+
+        isDisabled = false;
     }
 }
