Fixed the div tag

--- a/AiCalendar.Blazor/Components/Pages/Events/Details.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/Details.razor
@@ -17,7 +17,7 @@
     <h3 class="text-center">Event Details</h3>
 
     <div class="card">
-        < class="card-body">
+        <div class="card-body">
             <h5 class="card-title mb-3">Title: @_event.Title</h5>
             <h6 class="card-subtitle mb-3 text-muted">Start: @_event.StartDate.ToString("f", CultureInfo.InvariantCulture)</h6>
             <h6 class="card-subtitle mb-3 text-muted">End: @_event.EndDate.ToString("f", CultureInfo.InvariantCulture)</h6>
