--- a/AiCalendar.Blazor/Components/Pages/Events/SelectParticipants.razor
+++ b/AiCalendar.Blazor/Components/Pages/Events/SelectParticipants.razor
@@ -128,7 +128,7 @@ else
 
                 Users = responseData
                     .Where(r => r.Id != UserId && r.ParticipatingEvents
-                        .All(p => p.Id != eventId))
+                        .All(p => p.Id != eventId) && r.CreatedEvents.All(e=> e.Id != eventId))
                     .ToList();
             }
             else
